--- a/games/monop/monop.6
+++ b/games/monop/monop.6
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: monop.6,v 1.5 1999/07/09 13:35:57 aaron Exp $
+.\"	$OpenBSD: monop.6,v 1.6 2001/06/06 20:52:20 pjanzen Exp $
 .\"
 .\" Copyright (c) 1980 The Regents of the University of California.
 .\" All rights reserved.
@@ -170,13 +170,13 @@ If you simply hit the <RETURN> key instead of a command,
 it is the same as typing
 .Ic roll .
 .El
-.Sh AUTHOR
-Ken Arnold
 .Sh FILES
 .Bl -tag -width /usr/share/games/cards.pck -compact
 .It Pa /usr/share/games/cards.pck
 Chance and Community Chest cards
 .El
+.Sh AUTHOR
+Ken Arnold
 .Sh BUGS
 No command can be given an argument instead of a response to a query.
 .Pp
