--- a/games/factor/factor.6
+++ b/games/factor/factor.6
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: factor.6,v 1.5 1999/07/09 13:35:56 aaron Exp $
+.\"	$OpenBSD: factor.6,v 1.6 2001/06/06 20:52:18 pjanzen Exp $
 .\"
 .\" Copyright (c) 1989, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -47,8 +47,7 @@
 .Sh NAME
 .Nm factor ,
 .Nm primes
-.Nd
-factor a number, generate primes
+.Nd factor a number, generate primes
 .Sh SYNOPSIS
 .Nm factor
 .Op Ar number ...
