--- a/games/tetris/tetris.6
+++ b/games/tetris/tetris.6
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tetris.6,v 1.8 1999/07/03 02:11:12 aaron Exp $
+.\"	$OpenBSD: tetris.6,v 1.9 2001/06/06 20:52:22 pjanzen Exp $
 .\"
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -149,8 +149,6 @@ are marked with asterisks
 .It /var/games/tetris.scores
 high score file
 .El
-.Sh BUGS
-The higher levels are unplayable without a fast terminal connection.
 .Sh AUTHORS
 Adapted from a 1989 International Obfuscated C Code Contest winner by
 Chris Torek and Darren F. Provine.
@@ -159,3 +157,5 @@ Manual adapted from the original entry written by Nancy L. Tinkham and
 Darren F. Provine.
 .Pp
 Shape previewing code adapted from code by Hubert Feyrer.
+.Sh BUGS
+The higher levels are unplayable without a fast terminal connection.
