--- a/games/bs/bs.6
+++ b/games/bs/bs.6
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: bs.6,v 1.7 2001/06/06 20:52:17 pjanzen Exp $
+.\"	$OpenBSD: bs.6,v 1.8 2001/06/06 21:02:26 pjanzen Exp $
 .\"
 .\" Copyright (c) 1997, Jason Downs.  All rights reserved.
 .\"
@@ -42,40 +42,50 @@
 .Op Fl c
 .Sh DESCRIPTION
 This program allows you to play the familiar Battleships game against the
-computer on a 10x10 board.  The interface is visual and largely
-self-explanatory; you place your ships and pick your shots by moving the
-cursor around the
+computer on a 10x10 board.
+The interface is visual and largely self-explanatory;
+you place your ships and pick your shots by moving the cursor around the
 .Sq sea
-with the rogue/hack motion keys
+with the
+.Xr rogue 6
+/
+.Xr hack 6
+motion keys
 .Em hjklyubn .
 .Pp
 Note that when selecting a ship to place, you must type the capital letter
-(these are, after all, capital ships).  During ship placement, the
+(these are, after all, capital ships).
+During ship placement, the
 .Sq r
 command may be used to ignore the current position and randomly place your
-currently selected ship.  The
+currently selected ship.
+The
 .Sq R
-command will place all remaining ships randomly.  The ^L
-command (form feed, ASCII 12) will force a screen redraw).
+command will place all remaining ships randomly.
+The ^L command
+.Pq form feed, ASCII 12
+will force a screen redraw.
 .Sh OPTIONS
 The command-line arguments control game modes.
 .Bl -tag -width XxXXX
 .It Fl b
 Selects a
 .Sq blitz
-variant.  This allows a side to shoot for as long as it continues to score
-hits.
+variant.
+This allows a side to shoot for as long as it continues to score hits.
 .It Fl s
 Selects a
 .Sq salvo
-variant.  This allows a player one shot per turn for each of his/her
-ships still afloat.  This puts a premium on scoring hits early and knocking out
+variant.
+This allows a player one shot per turn for each of his/her
+ships still afloat.
+This puts a premium on scoring hits early and knocking out
 some ships and also makes it much harder, for example, when you face a superior
 force with only your PT-boat.
 .It Fl c
-Permits ships to be placed adjacently.  Normally, ships must be separated by
-at least one square of open water.  This disables that check and allows them
-to close-pack.
+Permits ships to be placed adjacently.
+Normally, ships must be separated by at least one square of open water.
+This disables that check and allows them to close-pack.
 .El
 .Sh AUTHORS
 Originally written by one Bruce Holloway in 1986.
@@ -86,4 +96,5 @@ option, code rewrite
 and manual page by Eric S. Raymond <esr@snark.thyrsus.com> August 1989.
 .Sh NOTES
 The algorithm the computer uses once it has found a ship to sink is provably
-optimal.  The dispersion criterion for the random-fire algorithm may not be.
+optimal.
+The dispersion criterion for the random-fire algorithm may not be.
