--- a/games/larn/larn.6
+++ b/games/larn/larn.6
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: larn.6,v 1.8 2000/06/29 07:55:42 pjanzen Exp $
+.\"	$OpenBSD: larn.6,v 1.9 2001/06/06 21:10:50 pjanzen Exp $
 .\"	$NetBSD: larn.6,v 1.3 1995/03/23 08:33:42 cgd Exp $
 .\"
 .\" Copyright (c) 1990 The Regents of the University of California.
@@ -55,51 +55,36 @@
 .Nm
 is a fantasy game in which your child has contracted
 a strange disease, and none of your home remedies
-seem to have any effect.  You set out to find a remedy in a limited
+seem to have any effect.
+You set out to find a remedy in a limited
 amount of time, and to collect gold along the way of course!
 .Pp
 The options are:
 .Pp
 .Bl -tag -width flag
 .It Fl s
-The
-.Fl s
-option shows the scoreboard for the game.
+Show the scoreboard for the game.
 .It Fl l
-The
-.Fl l
-option shows the log file (wizards only).
+Show the log file
+.Pq wizards only .
 .It Fl i
-The
-.Fl i
-option shows the scoreboard with dead character inventories.
+Show the scoreboard with dead character inventories.
 .It Fl c
-The
-.Fl c
-option creates a new game scoreboard (wizards only).
+Create a new game scoreboard
+.Pq wizards only .
 .It Fl n
-The
-.Fl n
-option suppresses the welcome message at start up.
+Suppress the welcome message at start-up.
 .It Fl Ar #
-The
-.Fl Ar #
-option sets the game difficulty level to
+Set the game difficulty level to
 .Ar #
-(example: -5).
+.Pq example: \-5 .
 .It Fl h
-The
-.Fl h
-option prints the command line options and exits.
+Print the command-line options and exit.
 .It Fl o
-The
-.Fl o
-option specifies a different options file than
+Specify a different options file than
 .Pa ~/.larnopts .
 .It Ar ++
-The
-.Ar ++
-argument restores a game from a checkpoint file.
+Restore a game from a checkpoint file.
 .El
 .Sh COMMANDS
 .Pp
@@ -154,11 +139,11 @@ Define what the savegame filename will be.
 .El
 .Pp
 Your name and monster names must be enclosed in double quotation marks and may
-be up to 34 characters long.  Longer names are truncated.
+be up to 34 characters long.
+Longer names are truncated.
 Anything enclosed in quotation marks is considered one word, and must be
 separated from other words by whitespace.
 .Sh SPECIAL NOTES
-.Pp
 When
 .Sy dropping gold ,
 if you type '*' as your amount, all your gold gets dropped.
@@ -169,11 +154,10 @@ You can get out of the store, trading post, school, or home by hitting
 .Sy <esc> .
 .Pp
 When casting a spell, if you need a list of spells you can cast, type \fBD\fP
-as the first letter of your spell.  The available list of spells will be shown,
-after which you may enter the spell code.  This only works on the 1st letter
-of the spell you are casting.
-.Sh AUTHOR
-Noah Morgan
+as the first letter of your spell.
+The available list of spells will be shown,
+after which you may enter the spell code.
+This only works on the first letter of the spell you are casting.
 .Sh FILES
 .Bl -tag -width "/var/games/larn/lscore12.0" -compact
 .It Pa /var/games/larn/lscore12.0
@@ -185,3 +169,5 @@ Options file.
 .It Pa ~/Larn.sav
 Default save file.
 .El
+.Sh AUTHOR
+Noah Morgan
