--- a/share/man/man4/wskbd.4
+++ b/share/man/man4/wskbd.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: wskbd.4,v 1.4 2001/05/28 15:50:11 aaron Exp $
+.\" $OpenBSD: wskbd.4,v 1.5 2001/06/08 04:08:26 aaron Exp $
 .\" $NetBSD: wskbd.4,v 1.5 2000/03/20 11:51:59 pk Exp $
 .\"
 .Dd March 20, 1999
@@ -79,6 +79,28 @@ if the device is in use as system console.
 This way, the console device can be connected to a known
 .Xr wskbd 4
 device instance.
+.Pp
+The
+.Nm
+driver traps certain key sequences intended to perform special functions.
+The
+.Cm Ctrl+Alt+Esc
+sequence will initiate the
+.Xr ddb 4
+kernel debugger if the
+.Dq ddb.console
+.Xr sysctl 8
+variable is set.
+When attached to a
+.Xr wsdisplay 4
+device,
+.Cm Ctrl+Alt+Fx
+switches virtual terminals and the
+.Cm Shift+PgUp
+and
+.Cm Shift+PgDn
+combinations provide scrollback functionality if the underlying hardware
+driver supports it.
 .Sh FILES
 .Bl -tag -width /usr/include/dev/wscons/wsksymdef.h -compact
 .It Pa /dev/wskbd*
