Fix a typo (perfomance -> performance) and lots of section shuffling; mpech@prosoft.org.lv

--- a/sbin/mount_ados/mount_ados.8
+++ b/sbin/mount_ados/mount_ados.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mount_ados.8,v 1.7 2000/10/10 22:51:41 marc Exp $
+.\"	$OpenBSD: mount_ados.8,v 1.8 2001/06/08 13:46:45 aaron Exp $
 .\"	$NetBSD: mount_ados.8,v 1.3 1995/03/18 14:57:09 cgd Exp $
 .\"
 .\" Copyright (c) 1993,1994 Christopher G. Demetriou
@@ -106,11 +106,11 @@ directory on which the file system is being mounted.
 .Xr unmount 2 ,
 .Xr fstab 5 ,
 .Xr mount 8
-.Sh CAVEATS
-The
-.Li ados
-filesystem currently supports the Amiga fast file system.
 .Sh HISTORY
 The
 .Nm
 utility first appeared in NetBSD 0.9b.
+.Sh CAVEATS
+The
+.Li ados
+filesystem currently supports the Amiga fast file system.
