--- a/sbin/mount_ffs/mount_ffs.8
+++ b/sbin/mount_ffs/mount_ffs.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mount_ffs.8,v 1.10 2001/01/10 20:02:29 deraadt Exp $
+.\"	$OpenBSD: mount_ffs.8,v 1.11 2001/06/08 13:46:47 aaron Exp $
 .\"	$NetBSD: mount_ffs.8,v 1.2 1996/02/05 06:33:47 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1989, 1991, 1993
@@ -85,10 +85,10 @@ man page for possible options and their meanings.
 .Xr unmount 2 ,
 .Xr fstab 5 ,
 .Xr mount 8
-.Sh BUGS
-It is possible for a corrupted file system to cause a crash.
 .Sh HISTORY
 A
 .Nm
 command appeared in
 .Nx 1.0a .
+.Sh BUGS
+It is possible for a corrupted file system to cause a crash.
