--- a/sbin/mount_msdos/mount_msdos.8
+++ b/sbin/mount_msdos/mount_msdos.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mount_msdos.8,v 1.12 2000/10/19 17:46:29 marc Exp $
+.\"	$OpenBSD: mount_msdos.8,v 1.13 2001/06/08 13:46:49 aaron Exp $
 .\"	$NetBSD: mount_msdos.8,v 1.10 1996/01/19 21:14:43 leo Exp $
 .\"
 .\" Copyright (c) 1993,1994 Christopher G. Demetriou
@@ -145,6 +145,15 @@ This option enforces
 .Xr unmount 2 ,
 .Xr fstab 5 ,
 .Xr mount 8
+.Sh HISTORY
+The
+.Nm
+utility first appeared in NetBSD 0.9.
+Its predecessor, the
+.Nm mount_pcfs
+utility, appeared in NetBSD 0.8, and was abandoned in favor
+of the more aptly named
+.Nm mount_msdos .
 .Sh CAVEATS
 The use of the
 .Fl 9
@@ -163,12 +172,3 @@ To generate long filenames on empty DOS file systems use
 .Pp
 Note that Windows 95/98 handles only access dates,
 but not access times.
-.Sh HISTORY
-The
-.Nm
-utility first appeared in NetBSD 0.9.
-Its predecessor, the
-.Nm mount_pcfs
-utility, appeared in NetBSD 0.8, and was abandoned in favor
-of the more aptly named
-.Nm mount_msdos .
