--- a/sbin/mount_nfs/mount_nfs.8
+++ b/sbin/mount_nfs/mount_nfs.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mount_nfs.8,v 1.21 2000/11/09 17:53:00 aaron Exp $
+.\"	$OpenBSD: mount_nfs.8,v 1.22 2001/06/08 13:46:50 aaron Exp $
 .\"	$NetBSD: mount_nfs.8,v 1.3 1996/02/18 11:59:10 fvdl Exp $
 .\"
 .\" Copyright (c) 1992, 1993, 1994, 1995
@@ -248,7 +248,7 @@ Set the retransmit timeout count for soft mounts to the specified value.
 In versions prior to
 .Ox 2.7
 .Nm nfsiod
-daemons were running to improve perfomance of client NFS I/O.
+daemons were running to improve performance of client NFS I/O.
 This is no longer done this way.
 Use
 .Xr sysctl 8
