--- a/sbin/mount_procfs/mount_procfs.8
+++ b/sbin/mount_procfs/mount_procfs.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mount_procfs.8,v 1.16 2001/04/09 07:14:19 tholo Exp $
+.\"	$OpenBSD: mount_procfs.8,v 1.17 2001/06/08 13:46:51 aaron Exp $
 .\"	$NetBSD: mount_procfs.8,v 1.6 1995/03/18 14:58:10 cgd Exp $
 .\"
 .\" Copyright (c) 1992, 1993
@@ -244,13 +244,13 @@ The block size of the filesystem is the system page size.
 .Xr mount 2 ,
 .Xr sigaction 2 ,
 .Xr unmount 2
-.Sh CAVEATS
-This filesystem may not be NFS-exported
-since most of the functionality of
-.Dv procfs
-requires that state be maintained.
 .Sh HISTORY
 The
 .Nm
 utility first appeared in
 .Bx 4.4 .
+.Sh CAVEATS
+This filesystem may not be NFS-exported
+since most of the functionality of
+.Dv procfs
+requires that state be maintained.
