--- a/sbin/mount_tcfs/mount_tcfs.8
+++ b/sbin/mount_tcfs/mount_tcfs.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mount_tcfs.8,v 1.2 2000/06/21 05:28:25 fgsch Exp $
+.\"	$OpenBSD: mount_tcfs.8,v 1.3 2001/06/08 13:46:52 aaron Exp $
 .\"
 .\" Copyright (c) 1980, 1989, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -66,13 +66,13 @@ as TCFS file system using cipher 2.
 .Xr unmount 2 ,
 .Xr fstab 5 ,
 .Xr mount 8
-.Sh BUGS
-This is a preliminary version, only for developers. Each other use is
-discouraged.
-.Pp
-Sorry, no docs.
 .Sh HISTORY
 A
 .Nm
 command appeared in
 .Ox 2.7 .
+.Sh BUGS
+This is a preliminary version, only for developers. Each other use is
+discouraged.
+.Pp
+Sorry, no docs.
