--- a/share/man/man4/pckbd.4
+++ b/share/man/man4/pckbd.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pckbd.4,v 1.5 2001/05/14 16:57:22 deraadt Exp $
+.\" $OpenBSD: pckbd.4,v 1.6 2001/06/08 17:27:07 mickey Exp $
 .\" $NetBSD: pckbd.4,v 1.3 1999/12/21 11:31:07 drochner Exp $
 .\"
 .Dd March 20, 1999
@@ -62,6 +62,11 @@ The built-in mappings are at this time:
 .Dq ru
 ) Russian in
 .Dq KOI8 .
+.It KB_SF
+(
+.Dq sf
+) Swiss French with
+.Dq dead accents .
 .It KB_SG
 (
 .Dq sg
