--- a/share/man/man8/man8.i386/boot_i386.8
+++ b/share/man/man8/man8.i386/boot_i386.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: boot_i386.8,v 1.1 2000/11/09 03:57:34 deraadt Exp $
+.\"	$OpenBSD: boot_i386.8,v 1.2 2001/06/10 19:02:19 mickey Exp $
 .\"
 .\" Copyright (c) 1997 Tobias Weingartner
 .\"
@@ -159,7 +159,7 @@ system second stage bootstrap
 The
 .Dq PC BIOS Architecture
 makes this process very prone to weird and
-wonderful interactions between differing operating systems.
+wonderful interactions between different operating systems.
 There is no published standard to the MBR and PBR,
 which makes coding these a nightmare.
 Somebody *please* write me a decent BIOS, and make them (the masses) use it!
