--- a/share/man/man4/man4.i386/mtrr.4
+++ b/share/man/man4/man4.i386/mtrr.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mtrr.4,v 1.6 2001/03/06 19:56:51 brad Exp $
+.\"	$OpenBSD: mtrr.4,v 1.7 2001/06/11 01:28:07 millert Exp $
 .\"
 .\" Pentium MTRR  driver for OpenBSD.
 .\" Copyright 1999 Matthieu Herrb <matthieu@openbsd.org>
@@ -32,7 +32,7 @@ calls performed on
 or
 .Pa /dev/xf86 .
 Declarations and data types are to be found in
-.Aq Pa memrange.h
+.Aq Pa sys/memrange.h
 .Pp
 The specific attributes, and number of programmable ranges may vary between
 architectures.
