support EDNS0 (RFC2671) buffer size notification on DNS queries. "options edns0" in /etc/resolv.conf will enable the behavior.  no behavior change if you don't have the line.  see resolv.conf(5) for more details.
EDNS0 is useful for avoiding TCP DNS queries/replies on larger DNS responses.
also, draft-ietf-dnsext-message-size-* plans to mandate EDNS0 support for DNS
clients that support IPv6 transport.

--- a/share/man/man5/resolv.conf.5
+++ b/share/man/man5/resolv.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: resolv.conf.5,v 1.14 2000/10/26 00:37:05 aaron Exp $
+.\"	$OpenBSD: resolv.conf.5,v 1.15 2001/06/11 10:06:04 itojun Exp $
 .\"	$NetBSD: resolv.conf.5,v 1.7 1996/03/06 18:22:16 scottr Exp $
 .\"
 .\" Copyright (c) 1986, 1991 The Regents of the University of California.
@@ -162,6 +162,22 @@ where option is one of the following:
 .Bl -tag -width ndots:n
 .It Sy debug
 Sets RES_DEBUG in _res.options.
+.It Sy edns0
+attach OPT pseudo-RR for ENDS0 extension specified in RFC2671,
+to inform DNS server of our receive buffer size.
+The option will allow DNS servers to take advantage of non-default receive
+buffer size, and to send larger replies.
+DNS query packets with EDNS0 extension is not compatible with
+non-EDNS0 DNS servers.
+The option must be used only when all the DNS servers listed in
+.Sy nameserver
+lines are able to handle EDNS0 extension.
+.It Sy inet6
+enable support for IPv6-only applications, by setting RES_USE_INET6 in
+_res.options (see
+.Xr resolver 3 ).
+The option is meaningful with certain kernel configuration only and
+use of this options is discourated.
 .It Sy inet6
 Enables support for IPv6-only applications, by setting RES_USE_INET6 in
 _res.options (see
