reword phrase; from jcs@rt.fm

--- a/share/man/man4/wx.4
+++ b/share/man/man4/wx.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: wx.4,v 1.8 2001/04/14 20:07:04 deraadt Exp $
+.\"	$OpenBSD: wx.4,v 1.9 2001/06/13 01:06:54 lebel Exp $
 .\"
 .\" Copyright (c) 2000
 .\"	Traakan Software. All rights reserved.
@@ -142,4 +142,4 @@ device driver first appeared in
 .Sh BUGS
 The
 .Nm
-has not got a very good recovery from link-up/link-down events.
+device driver does not recover well from link-up/link-down events.
