--- a/share/man/man4/pckbd.4
+++ b/share/man/man4/pckbd.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pckbd.4,v 1.6 2001/06/08 17:27:07 mickey Exp $
+.\" $OpenBSD: pckbd.4,v 1.7 2001/06/13 20:40:35 mickey Exp $
 .\" $NetBSD: pckbd.4,v 1.3 1999/12/21 11:31:07 drochner Exp $
 .\"
 .Dd March 20, 1999
@@ -76,6 +76,11 @@ The built-in mappings are at this time:
 (
 .Dq sv
 ) Swedish with
+.Dq dead accents .
+.It KB_PT
+(
+.Dq pt
+) Portuguese with
 .Dq dead accents .
 .It KB_UK
 (
