--- a/usr.bin/skeyinfo/skeyinfo.1
+++ b/usr.bin/skeyinfo/skeyinfo.1
@@ -1,6 +1,6 @@
-.\" $OpenBSD: skeyinfo.1,v 1.3 2000/03/11 21:40:02 aaron Exp $
+.\" $OpenBSD: skeyinfo.1,v 1.4 2001/06/17 22:44:51 millert Exp $
 .\"
-.Dd 22 July 1997
+.Dd 17 June 2001
 .Dt SKEYINFO 1
 .Os
 .Sh NAME
@@ -28,3 +28,6 @@ an untrusted network (perhaps for use at a conference).
 .Sh SEE ALSO
 .Xr skey 1 ,
 .Xr skeyinit 1
+.Sh CAVEATS
+If the user does not have an entry in the S/Key database a fake
+challenge will be printed.
