--- a/share/man/man8/man8.powerpc/MAKEDEV.8
+++ b/share/man/man8/man8.powerpc/MAKEDEV.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: MAKEDEV.8,v 1.5 2001/01/31 19:30:16 brad Exp $
+.\"	$OpenBSD: MAKEDEV.8,v 1.6 2001/06/18 08:25:52 deraadt Exp $
 .\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
 .\"
@@ -106,8 +106,6 @@ SCSI CD-ROM drives
 SCSI media changer drives
 .It Ar fd#
 Floppy disk drives
-.It Ar ipl
-IPFilter log
 .It Ar lkm
 Loadable kernel modules.
 .It Ar pty#
