--- a/share/man/man8/man8.sparc/MAKEDEV.8
+++ b/share/man/man8/man8.sparc/MAKEDEV.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: MAKEDEV.8,v 1.7 2001/01/27 23:46:26 brad Exp $
+.\"	$OpenBSD: MAKEDEV.8,v 1.8 2001/06/18 08:25:53 deraadt Exp $
 .\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
 .\"
@@ -127,8 +127,6 @@ Serial ports
 .It Ar fd#
 .Dq floppy
 disk drives
-.It Ar ipl
-IPFilter log
 .It Ar kbd
 The keyboard
 .It Ar lkm
