o Don't talk about /bin/mail vs. sendmail since we always build with   sendmail support. o Remove misleading info in STANDARDS about the syntax being different   from previous Vixie Cron versions.  The flags have been this way for   all versions of cron we have shipped with.

--- a/usr.sbin/cron/crontab.5
+++ b/usr.sbin/cron/crontab.5
@@ -15,7 +15,7 @@
 .\" ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS
 .\" SOFTWARE.
 .\"
-.\" $OpenBSD: crontab.5,v 1.12 2001/02/18 19:48:32 millert Exp $
+.\" $OpenBSD: crontab.5,v 1.13 2001/06/19 22:40:24 millert Exp $
 .\"
 .Dd June 8, 1999
 .Dt CRONTAB 5
@@ -162,18 +162,8 @@ no
 mail will be sent.
 Otherwise mail is sent to the owner of the
 .Nm crontab .
-This option is useful if you decide on
-.Pa /bin/mail
-instead of
-.Pa /usr/lib/sendmail
-as
-your mailer when you install
-.Xr cron 8
-\(em
-.Pa /bin/mail
-doesn't do aliasing, and
-.Tn UUCP
-usually doesn't read its mail.
+This option is useful for pseudo-users that lack an alias
+that would otherwise redirect the mail to a real person.
 .Pp
 .Em cron Commands
 .Pp
