typo; raj@cerias.purdue.edu

--- a/share/man/man4/wx.4
+++ b/share/man/man4/wx.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: wx.4,v 1.9 2001/06/13 01:06:54 lebel Exp $
+.\"	$OpenBSD: wx.4,v 1.10 2001/06/20 15:55:40 pvalchev Exp $
 .\"
 .\" Copyright (c) 2000
 .\"	Traakan Software. All rights reserved.
@@ -54,7 +54,7 @@ adapters that have external PHYs or built-in autonegotiation logic.
 .It Cm media No 1000baseSX Cm mediaopt No full-duplex
 Set 1000Mbps (Gigabit Ethernet) operation on fiber and force full-duplex mode.
 .It Cm media No 1000baseSX
-Set 1000Mpbs (Gigabit Ethernet) operation on fiber.
+Set 1000Mbps (Gigabit Ethernet) operation on fiber.
 .It Cm media No 1000baseTX
 Set 1000Mbps (Gigabit Ethernet) operation on copper.
 .It Cm media No 100baseTX Cm mediaopt No full-duplex
