--- a/share/man/man4/man4.vax/mtio.4
+++ b/share/man/man4/man4.vax/mtio.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mtio.4,v 1.6 1999/07/09 13:35:39 aaron Exp $
+.\"	$OpenBSD: mtio.4,v 1.7 2001/06/20 16:49:44 millert Exp $
 .\"	$NetBSD: mtio.4,v 1.4 1996/03/03 17:13:54 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 The Regents of the University of California.
@@ -71,7 +71,7 @@ tape formatters,
 .Xr ts 4 .
 These devices are typical tape block devices,
 see
-.Xr physio 4 .
+.Xr physio 9 .
 .Pp
 The conventional device letters/numbers
 is applicable to any of the transport/controller pairs.
