--- a/share/man/man4/man4.vax/uda.4
+++ b/share/man/man4/man4.vax/uda.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: uda.4,v 1.5 1999/09/23 04:12:06 alex Exp $
+.\"	$OpenBSD: uda.4,v 1.6 2001/06/20 16:49:44 millert Exp $
 .\"	$NetBSD: uda.4,v 1.3 1996/03/03 17:14:10 thorpej Exp $
 .\"
 .\" Copyright (c) 1980, 1987, 1991 Regents of the University of California.
@@ -63,7 +63,7 @@ The
 .Nm uda
 driver
 is a typical block-device disk driver; see
-.Xr physio 4
+.Xr physio 9
 for a description of block
 .Tn I/O .
 The script
@@ -128,7 +128,7 @@ to
 and which corresponds to a minor device number set: zero to seven,
 eight to 15, 16 to 23 and so forth for drive zero, drive two and drive
 three respectively, (see
-.Xr physio 4) .
+.Xr physio 9) .
 The location and size (in sectors) of the partitions:
 .Bl -column header diskx undefined length
 .Tn RA60 No partitions
