--- a/share/man/man4/man4.vax/up.4
+++ b/share/man/man4/man4.vax/up.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: up.4,v 1.5 1999/06/05 13:18:39 aaron Exp $
+.\"	$OpenBSD: up.4,v 1.6 2001/06/20 16:49:44 millert Exp $
 .\"	$NetBSD: up.4,v 1.3 1996/03/03 17:14:12 thorpej Exp $
 .\"
 .\" Copyright (c) 1980,1988, 1991 Regents of the University of California.
@@ -102,7 +102,7 @@ to
 which also corresponds to a minor device number set: zero to seven,
 eight to 15, 16 to 23 and so forth for drive zero, drive two and drive
 three respectively (see
-.Xr physio 4 ) .
+.Xr physio 9 ) .
 The location and size (in 512 byte sectors) of the
 partitions for the above drives:
 .Bl -column header diskx undefined length
