--- a/usr.bin/nm/nm.1
+++ b/usr.bin/nm/nm.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: nm.1,v 1.8 2001/05/30 16:58:40 smart Exp $
+.\"	$OpenBSD: nm.1,v 1.9 2001/06/20 22:32:53 millert Exp $
 .\"	$NetBSD: nm.1,v 1.3 1995/08/31 23:41:58 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
@@ -42,7 +42,7 @@
 .Nd display name list (symbol table)
 .Sh SYNOPSIS
 .Nm nm
-.Op Fl agnopruw
+.Op Fl aCgnopruw
 .Op Ar file ...
 .Sh DESCRIPTION
 The symbol table (name list) of each object in
