--- a/share/man/man7/mdoc.7
+++ b/share/man/man7/mdoc.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mdoc.7,v 1.19 2001/02/25 07:08:31 aaron Exp $
+.\"	$OpenBSD: mdoc.7,v 1.20 2001/06/22 11:14:52 mpech Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -313,7 +313,7 @@ Produces
 .It Li \&Op Ta Yes Ta Yes Ta "Option (also .Oo and .Oc)."
 .It Li \&Ot Ta Yes Ta Yes Ta "Old style function type (Fortran only)."
 .It Li \&Pa Ta Yes Ta Yes Ta "Pathname or file name."
-.It Li \&St Ta Yes Ta Yes Ta "Standards (-p1003.2, -p1003.1 or -ansiC)"
+.It Li \&St Ta Yes Ta Yes Ta "Standards (-p1003.2, -p1003.1 or -ansiC)."
 .It Li \&Va Ta Yes Ta Yes Ta "Variable name."
 .It Li \&Vt Ta Yes Ta Yes Ta "Variable type (Fortran only)."
 .It Li \&Xr Ta Yes Ta Yes Ta "Manual Page Cross Reference."
